增加指纹poc工作流

--- a/common/config/api-config.yaml
+++ b/common/config/api-config.yaml
@@ -1,5 +1,5 @@
-bevigil: []
-binaryedge: []
+bevigil: [""]
+binaryedge: [""]
 bufferover: []
 c99: []
 censys: []
@@ -11,18 +11,19 @@ dnsrepo: []
 # fofa: ["123455@qq.com:key"]
 fofa: []
 fullhunt: []
-github: []
+github: [""]
 # hunter: ["123"]
 hunter: []
 intelx: []
 leakix: []
 passivetotal: []
-quake: []
+quake: [""]
 robtex: []
 securitytrails: []
 shodan: []
 threatbook: []
 virustotal: []
 whoisxmlapi: []
-zoomeye: []
-zoomeyeapi: []
+zoomeye: [""]
+zoomeyeapi: [""]
+
